fix: bind closed-loop seed flows to consumers