@@ -38,8 +38,16 @@ public final class Ae2ClosedLoopPatternDetails
     private final Map<AEKey, Long> availableSeedSnapshot;
     private final Set<AEKey> cycleKeys;
     private final Map<AEKey, Set<AEKey>> acceptedSeedVariants;
-    private final Set<AEKey> fuzzySeedKeys;
+    private final Set<AEKey> universallyFuzzySeedKeys;
+    /**
+     * Host variants are extracted before the CPU can assign them to individual P2 accounts.
+     * A multi-unit P2 bundle could therefore be split into incompatible concrete states (for
+     * example {@code A + X} for a {@code 2A} slot). Until host extraction is bundle-aware, those
+     * bootstrap keys must use the exact planned representation.
+     */
+    private final Set<AEKey> exactOnlyHostSeedKeys;
     private final boolean singleSeedInputPerMember;
+    private final ClosedLoopConsumerRouting.RoutingPlan consumerRouting;
 
     public Ae2ClosedLoopPatternDetails(AEItemKey definition, ClosedLoopPatternPayload payload, Level level) {
         this(definition, payload, level, null, Map.of());
@@ -92,12 +100,6 @@ public final class Ae2ClosedLoopPatternDetails
         }
         var seedAmounts = new java.util.LinkedHashMap<AEKey, Long>();
         for (var seed : payload.seeds()) seedAmounts.merge(seed.what(), seed.amount(), Sat::add);
-        var acceptedVariants = new LinkedHashMap<AEKey, Set<AEKey>>();
-        var fuzzySeeds = new java.util.LinkedHashSet<AEKey>();
-        collectAcceptedSeedVariants(
-                rawMembers, seedAmounts.keySet(), acceptedVariants, fuzzySeeds);
-        this.acceptedSeedVariants = Map.copyOf(acceptedVariants);
-        this.fuzzySeedKeys = Set.copyOf(fuzzySeeds);
         this.cycleKeys = ClosedLoopCycleKeys.analyze(rawMembers, seedAmounts.keySet());
 
         var analyzedMembers = new ArrayList<ClosedLoopPatternAnalyzer.Member>(
@@ -111,13 +113,30 @@ public final class Ae2ClosedLoopPatternDetails
         if (memberFlows.size() != rawMembers.size()) {
             throw new IllegalArgumentException("closed-loop member seed transitions are unavailable");
         }
-        this.singleSeedInputPerMember =
-                ClosedLoopPatternAnalyzer.hasSingleSeedInputPerMember(memberFlows);
+        validateFuzzyOutputSeedConsumers(analyzedMembers, memberFlows);
+        var acceptedVariants = new LinkedHashMap<AEKey, Set<AEKey>>();
+        var anyFuzzySeeds = new java.util.LinkedHashSet<AEKey>();
+        var universallyFuzzySeeds = new java.util.LinkedHashSet<AEKey>();
+        collectAcceptedSeedVariants(
+                rawMembers, memberFlows, seedAmounts.keySet(), acceptedVariants,
+                anyFuzzySeeds, universallyFuzzySeeds);
+        this.acceptedSeedVariants = Map.copyOf(acceptedVariants);
+        this.universallyFuzzySeedKeys = Set.copyOf(universallyFuzzySeeds);
+        this.singleSeedInputPerMember = isSharedSeedPoolSafe(
+                ClosedLoopPatternAnalyzer.hasSingleSeedInputPerMember(memberFlows),
+                seedAmounts.keySet(), acceptedVariants, anyFuzzySeeds);
+        this.consumerRouting = ClosedLoopConsumerRouting.compile(
+                payload.patternId(), memberFlows);
+        if (!this.consumerRouting.bootstrapSeed().equals(Map.copyOf(seedAmounts))) {
+            throw new IllegalArgumentException(
+                    "closed-loop consumer bootstrap does not match the encoded seed state");
+        }
 
         var decodedMembers = new ArrayList<ExpandedMember>(payload.memberPatterns().size());
         int memberIndex = 0;
         for (var member : payload.memberPatterns()) {
             var details = rawMembers.get(memberIndex);
+            var memberFlow = memberFlows.get(memberIndex);
             var item = (com.moakiee.ae2lt.item.ClosedLoopPatternItem) definition.getItem();
             var persistenceDefinition = AEItemKey.of(item.createExecutionMemberStack(
                     payload, memberIndex, level.registryAccess()));
@@ -126,14 +145,22 @@ public final class Ae2ClosedLoopPatternDetails
             }
             decodedMembers.add(new ExpandedMember(
                     ClosedLoopExpandedPatternDetails.wrap(
-                            details, seedAmounts, cycleKeys, payload.patternId(),
+                            details, memberSeedAmounts(seedAmounts, memberFlow.inputSeed().keySet()),
+                            cycleKeys, payload.patternId(),
                             singleSeedInputPerMember,
+                            memberFlow.inputSeedBySlot(),
                             payload.memberPatterns().size() == 1,
                             persistenceDefinition, memberIndex),
-                    member.copiesPerCycle(), memberFlows.get(memberIndex)));
+                    member.copiesPerCycle(), memberFlow));
             memberIndex++;
         }
         members = List.copyOf(decodedMembers);
+        this.exactOnlyHostSeedKeys = exactOnlyHostSeedKeys(
+                memberFlows,
+                payload.memberPatterns().stream()
+                        .map(ClosedLoopMemberPattern::copiesPerCycle)
+                        .toList(),
+                consumerRouting);
         this.availableSeedSnapshot = Map.copyOf(
                 availableSeedSnapshotFactory.apply(this));
     }
@@ -162,13 +189,28 @@ public final class Ae2ClosedLoopPatternDetails
     public Map<IPatternDetails, Long> expandPatternFirings(long macroFirings) {
         if (macroFirings <= 0) return Map.of();
         var result = new LinkedHashMap<IPatternDetails, Long>();
-        for (var member : members) {
-            for (var slice : splitMemberFlow(member.flow(), member.copiesPerCycle())) {
+        for (int memberIndex = 0; memberIndex < members.size(); memberIndex++) {
+            var member = members.get(memberIndex);
+            var consumer = consumerRouting.consumers().get(memberIndex);
+            var producer = consumerRouting.producers().get(memberIndex);
+            for (var slice : splitMemberFlow(
+                    member.flow(), member.copiesPerCycle(), producer.targets())) {
                 long count = Sat.mul(macroFirings, slice.copiesPerCycle());
+                var sharedCredits = singleSeedInputPerMember
+                        ? selectCredits(
+                                slice.outputSeedCredits(), producer.wrappedTargets(), true)
+                        : Map.<UUID, Map<AEKey, Long>>of();
+                var consumerCredits = singleSeedInputPerMember
+                        ? selectCredits(
+                                slice.outputSeedCredits(), producer.wrappedTargets(), false)
+                        : slice.outputSeedCredits();
                 result.put(new ExecuteLoopPattern(
                         member.details(),
+                        consumer.consumerId(),
+                        scaledCounter(consumer.bootstrapSeed(), payload.seedMultiplier()),
                         counter(slice.inputSeed()),
-                        counter(slice.outputSeed())), count);
+                        counters(consumerCredits),
+                        counters(sharedCredits)), count);
             }
         }
         return Collections.unmodifiableMap(result);
@@ -199,11 +241,64 @@ public final class Ae2ClosedLoopPatternDetails
     public boolean acceptsReusableSeedVariant(AEKey planned, AEKey actual) {
         if (planned == null || actual == null) return false;
         if (planned.equals(actual)) return true;
-        if (fuzzySeedKeys.contains(planned)
+        if (exactOnlyHostSeedKeys.contains(planned)) return false;
+        if (universallyFuzzySeedKeys.contains(planned)
                 && planned.dropSecondary().equals(actual.dropSecondary())) {
             return true;
         }
         return acceptedSeedVariants.getOrDefault(planned, Set.of()).contains(actual);
+    }
+
+    /**
+     * Mirrors the bundle registration performed by {@code LoopSeedLedgerBook}. The flow splitter
+     * matters here: {@code 2A} across two executions is two safe unit bundles, while {@code 2A}
+     * in one execution is one indivisible two-unit P2 bundle.
+     */
+    static Set<AEKey> exactOnlyHostSeedKeys(
+            List<ClosedLoopPatternAnalyzer.MemberFlow> memberFlows,
+            List<Long> copiesPerCycle,
+            ClosedLoopConsumerRouting.RoutingPlan routing) {
+        if (memberFlows == null || copiesPerCycle == null || routing == null
+                || memberFlows.size() != copiesPerCycle.size()
+                || memberFlows.size() != routing.consumers().size()
+                || memberFlows.size() != routing.producers().size()) {
+            throw new IllegalArgumentException("closed-loop host bundle metadata is inconsistent");
+        }
+
+        var bundleUnitsByConsumer = new LinkedHashMap<UUID, Map<AEKey, Long>>();
+        for (int memberIndex = 0; memberIndex < memberFlows.size(); memberIndex++) {
+            long copies = copiesPerCycle.get(memberIndex);
+            if (copies <= 0) {
+                throw new IllegalArgumentException("closed-loop member copies must be positive");
+            }
+            var consumer = routing.consumers().get(memberIndex);
+            var producer = routing.producers().get(memberIndex);
+            var units = bundleUnitsByConsumer.computeIfAbsent(
+                    consumer.consumerId(), ignored -> new LinkedHashMap<>());
+            for (var slice : splitMemberFlow(
+                    memberFlows.get(memberIndex), copies, producer.targets())) {
+                for (var input : slice.inputSeed().entrySet()) {
+                    if (input.getValue() <= 0) continue;
+                    var previous = units.putIfAbsent(input.getKey(), input.getValue());
+                    if (previous != null && previous.longValue() != input.getValue()) {
+                        // This is the same fail-closed sentinel used by the runtime ledger.
+                        units.put(input.getKey(), 0L);
+                    }
+                }
+            }
+        }
+
+        var result = new java.util.LinkedHashSet<AEKey>();
+        for (var consumer : routing.consumers()) {
+            var units = bundleUnitsByConsumer.getOrDefault(consumer.consumerId(), Map.of());
+            for (var bootstrap : consumer.bootstrapSeed().entrySet()) {
+                if (bootstrap.getValue() > 0
+                        && units.getOrDefault(bootstrap.getKey(), 0L) != 1L) {
+                    result.add(bootstrap.getKey());
+                }
+            }
+        }
+        return Set.copyOf(result);
     }
 
     @Override
@@ -226,43 +321,97 @@ public final class Ae2ClosedLoopPatternDetails
         return availableSeedSnapshot;
     }
 
-    private static void collectAcceptedSeedVariants(
+    static void collectAcceptedSeedVariants(
             List<IPatternDetails> members,
+            List<ClosedLoopPatternAnalyzer.MemberFlow> memberFlows,
             Set<AEKey> seeds,
             Map<AEKey, Set<AEKey>> accepted,
-            Set<AEKey> fuzzySeeds) {
-        for (var details : members) {
+            Set<AEKey> anyFuzzySeeds) {
+        collectAcceptedSeedVariants(
+                members, memberFlows, seeds, accepted, anyFuzzySeeds,
+                new java.util.LinkedHashSet<>());
+    }
+
+    static void collectAcceptedSeedVariants(
+            List<IPatternDetails> members,
+            List<ClosedLoopPatternAnalyzer.MemberFlow> memberFlows,
+            Set<AEKey> seeds,
+            Map<AEKey, Set<AEKey>> accepted,
+            Set<AEKey> anyFuzzySeeds,
+            Set<AEKey> universallyFuzzySeeds) {
+        var rules = new LinkedHashMap<AEKey, ExecuteLoopPattern.SeedVariantRule>();
+        for (int memberIndex = 0; memberIndex < members.size(); memberIndex++) {
+            var details = members.get(memberIndex);
             var provider = CraftingPatternDelegates.forProviderLookup(details);
             var overload = provider instanceof OverloadedProviderOnlyPatternDetails candidate
                     ? candidate : null;
-            var inputs = details.getInputs();
-            for (int slot = 0; slot < inputs.length; slot++) {
+            var inputs = ClosedLoopExpandedPatternDetails.pinReusableSeedInputs(
+                    details, memberFlows.get(memberIndex).inputSeedBySlot());
+            for (var mapped : memberFlows.get(memberIndex).inputSeedBySlot().entrySet()) {
+                int slot = mapped.getKey();
+                var seed = mapped.getValue();
+                if (!seeds.contains(seed) || slot < 0 || slot >= inputs.length) continue;
                 boolean fuzzy = overload != null && overload.isFuzzyInput(slot);
                 var possible = inputs[slot].getPossibleInputs();
-                for (var seed : seeds) {
-                    boolean matchesSlot = false;
-                    for (var option : possible) {
-                        if (option.what() != null && (seed.equals(option.what())
-                                || (fuzzy && seed.dropSecondary()
-                                        .equals(option.what().dropSecondary())))) {
-                            matchesSlot = true;
-                            break;
-                        }
-                    }
-                    if (!matchesSlot) continue;
-                    if (fuzzy) fuzzySeeds.add(seed);
-                    var variants = new java.util.LinkedHashSet<AEKey>(
-                            accepted.getOrDefault(seed, Set.of()));
-                    for (var option : possible) {
-                        if (option.what() != null && (!fuzzy
-                                || seed.dropSecondary().equals(option.what().dropSecondary()))) {
-                            variants.add(option.what());
-                        }
-                    }
-                    accepted.put(seed, Set.copyOf(variants));
+                var exact = new java.util.LinkedHashSet<AEKey>();
+                var fuzzyIdentities = new java.util.LinkedHashSet<AEKey>();
+                exact.add(seed);
+                boolean matchesSlot = false;
+                for (var option : possible) {
+                    if (option.what() == null) continue;
+                    boolean matches = seed.equals(option.what())
+                            || (fuzzy && seed.dropSecondary()
+                                    .equals(option.what().dropSecondary()));
+                    if (!matches) continue;
+                    matchesSlot = true;
+                    exact.add(option.what());
+                    if (fuzzy) fuzzyIdentities.add(option.what().dropSecondary());
                 }
+                if (!matchesSlot) continue;
+                if (fuzzy) anyFuzzySeeds.add(seed);
+                var slotRule = new ExecuteLoopPattern.SeedVariantRule(
+                        exact, fuzzyIdentities);
+                rules.merge(seed, slotRule, ExecuteLoopPattern.SeedVariantRule::intersect);
             }
         }
+        for (var seed : seeds) {
+            var rule = rules.getOrDefault(seed,
+                    new ExecuteLoopPattern.SeedVariantRule(Set.of(seed), Set.of()));
+            accepted.put(seed, rule.exactVariants());
+            if (rule.fuzzyIdentities().contains(seed.dropSecondary())) {
+                universallyFuzzySeeds.add(seed);
+            }
+        }
+    }
+
+    static void validateFuzzyOutputSeedConsumers(
+            List<ClosedLoopPatternAnalyzer.Member> members,
+            List<ClosedLoopPatternAnalyzer.MemberFlow> memberFlows) {
+        if (!ClosedLoopPatternAnalyzer.hasSafeDynamicSeedRouting(members, memberFlows)) {
+            throw new IllegalArgumentException(
+                    "dynamic closed-loop seed output cannot reach a compatible P2 bundle");
+        }
+    }
+
+    /**
+     * The global single-seed pool is safe only when its physical state has one exact
+     * representation. A fuzzy/alternative state must stay in its fixed consumer account: sharing
+     * it with another loop that accepts only the planned key can otherwise strand that loop after
+     * the first component-changing transition.
+     */
+    static boolean isSharedSeedPoolSafe(
+            boolean structurallySingleSeed,
+            Set<AEKey> seeds,
+            Map<AEKey, Set<AEKey>> acceptedVariants,
+            Set<AEKey> fuzzySeeds) {
+        if (!structurallySingleSeed) return false;
+        for (var seed : seeds) {
+            if (fuzzySeeds.contains(seed)) return false;
+            for (var variant : acceptedVariants.getOrDefault(seed, Set.of())) {
+                if (!seed.equals(variant)) return false;
+            }
+        }
+        return true;
     }
 
     @Override
@@ -313,12 +462,24 @@ public final class Ae2ClosedLoopPatternDetails
      */
     static List<MemberFlowSlice> splitMemberFlow(
             ClosedLoopPatternAnalyzer.MemberFlow flow, long copiesPerCycle) {
+        var self = UUID.nameUUIDFromBytes("ae2lt:test-flow-slice".getBytes(
+                java.nio.charset.StandardCharsets.UTF_8));
+        return splitMemberFlow(
+                flow, copiesPerCycle, Map.of(self, flow.outputSeed()));
+    }
+
+    static List<MemberFlowSlice> splitMemberFlow(
+            ClosedLoopPatternAnalyzer.MemberFlow flow,
+            long copiesPerCycle,
+            Map<UUID, Map<AEKey, Long>> outputSeedCredits) {
         if (flow == null || copiesPerCycle <= 0) return List.of();
         var boundaries = new TreeSet<Long>();
         boundaries.add(0L);
         boundaries.add(copiesPerCycle);
         addRemainderBoundaries(boundaries, flow.inputSeed(), copiesPerCycle);
         addRemainderBoundaries(boundaries, flow.outputSeed(), copiesPerCycle);
+        addCreditBoundaries(
+                boundaries, flow.outputSeed(), outputSeedCredits, copiesPerCycle);
 
         var points = new ArrayList<>(boundaries);
         var slices = new ArrayList<MemberFlowSlice>(Math.max(1, points.size() - 1));
@@ -329,6 +490,8 @@ public final class Ae2ClosedLoopPatternDetails
             slices.add(new MemberFlowSlice(
                     perCopyAt(flow.inputSeed(), copiesPerCycle, start),
                     perCopyAt(flow.outputSeed(), copiesPerCycle, start),
+                    perCopyCreditsAt(
+                            flow.outputSeed(), outputSeedCredits, copiesPerCycle, start),
                     end - start));
         }
         return List.copyOf(slices);
@@ -353,7 +516,7 @@ public final class Ae2ClosedLoopPatternDetails
             if (copyIndex < total % copiesPerCycle) amount = Sat.add(amount, 1L);
             if (amount > 0) result.put(entry.getKey(), amount);
         }
-        return Map.copyOf(result);
+        return Collections.unmodifiableMap(result);
     }
 
     private static appeng.api.stacks.KeyCounter counter(Map<AEKey, Long> values) {
@@ -364,13 +527,182 @@ public final class Ae2ClosedLoopPatternDetails
         return result;
     }
 
+    /** Values retain bootstrap sizing where available; keys are this member's actual loop inputs. */
+    static Map<AEKey, Long> memberSeedAmounts(
+            Map<AEKey, Long> bootstrap, Set<AEKey> memberInputs) {
+        var result = new LinkedHashMap<AEKey, Long>();
+        for (var key : memberInputs) {
+            result.put(key, Math.max(1L, bootstrap.getOrDefault(key, 1L)));
+        }
+        return Collections.unmodifiableMap(result);
+    }
+
+    private static appeng.api.stacks.KeyCounter scaledCounter(
+            Map<AEKey, Long> values, long scale) {
+        var result = new appeng.api.stacks.KeyCounter();
+        for (var entry : values.entrySet()) {
+            long amount = Sat.mul(entry.getValue(), scale);
+            if (amount > 0) result.add(entry.getKey(), amount);
+        }
+        return result;
+    }
+
+    private static Map<UUID, appeng.api.stacks.KeyCounter> counters(
+            Map<UUID, Map<AEKey, Long>> values) {
+        var result = new LinkedHashMap<UUID, appeng.api.stacks.KeyCounter>();
+        for (var entry : values.entrySet()) {
+            var counter = counter(entry.getValue());
+            if (!counter.isEmpty()) result.put(entry.getKey(), counter);
+        }
+        return Collections.unmodifiableMap(result);
+    }
+
+    private static Map<UUID, Map<AEKey, Long>> perCopyCreditsAt(
+            Map<AEKey, Long> outputSeed,
+            Map<UUID, Map<AEKey, Long>> values,
+            long copiesPerCycle,
+            long copyIndex) {
+        var result = new LinkedHashMap<UUID, Map<AEKey, Long>>();
+        for (var output : outputSeed.entrySet()) {
+            long total = Math.max(0L, output.getValue());
+            if (total <= 0) continue;
+            long copyStart = creditPrefix(total, copiesPerCycle, copyIndex);
+            long copyEnd = creditPrefix(total, copiesPerCycle, copyIndex + 1L);
+            long targetStart = 0L;
+            for (var target : values.entrySet()) {
+                long targetAmount = Math.max(
+                        0L, target.getValue().getOrDefault(output.getKey(), 0L));
+                long targetEnd = Sat.add(targetStart, targetAmount);
+                long overlapStart = Math.max(copyStart, targetStart);
+                long overlapEnd = Math.min(copyEnd, targetEnd);
+                if (overlapEnd > overlapStart) {
+                    var targetCredits = new LinkedHashMap<>(
+                            result.getOrDefault(target.getKey(), Map.of()));
+                    targetCredits.put(output.getKey(), overlapEnd - overlapStart);
+                    result.put(target.getKey(), Collections.unmodifiableMap(targetCredits));
+                }
+                targetStart = targetEnd;
+            }
+            if (targetStart != total) {
+                throw new IllegalArgumentException(
+                        "consumer credits do not match member seed output for "
+                                + output.getKey());
+            }
+        }
+        return Collections.unmodifiableMap(result);
+    }
+
+    private static Map<UUID, Map<AEKey, Long>> selectCredits(
+            Map<UUID, Map<AEKey, Long>> credits,
+            Map<UUID, Map<AEKey, Long>> wrappedCredits,
+            boolean selectWrapped) {
+        var result = new LinkedHashMap<UUID, Map<AEKey, Long>>();
+        for (var target : credits.entrySet()) {
+            var selected = new LinkedHashMap<AEKey, Long>();
+            var wrappedForTarget = wrappedCredits.getOrDefault(target.getKey(), Map.of());
+            for (var entry : target.getValue().entrySet()) {
+                boolean wrapped = wrappedForTarget.getOrDefault(entry.getKey(), 0L) > 0;
+                if (wrapped == selectWrapped) selected.put(entry.getKey(), entry.getValue());
+            }
+            if (!selected.isEmpty()) {
+                result.put(target.getKey(), Collections.unmodifiableMap(selected));
+            }
+        }
+        return Collections.unmodifiableMap(result);
+    }
+
+    /**
+     * Adds only the copy boundaries where a flattened consumer allocation can change. Credits for
+     * one output key share one cursor; their remainders must not all be front-loaded into copy 0.
+     */
+    private static void addCreditBoundaries(
+            Set<Long> boundaries,
+            Map<AEKey, Long> outputSeed,
+            Map<UUID, Map<AEKey, Long>> credits,
+            long copiesPerCycle) {
+        var creditedKeys = new java.util.LinkedHashSet<AEKey>();
+        for (var target : credits.values()) {
+            for (var entry : target.entrySet()) {
+                if (entry.getValue() != null && entry.getValue() > 0) {
+                    creditedKeys.add(entry.getKey());
+                }
+            }
+        }
+        for (var key : creditedKeys) {
+            if (outputSeed.getOrDefault(key, 0L) <= 0) {
+                throw new IllegalArgumentException(
+                        "consumer credit has no matching member seed output for " + key);
+            }
+        }
+
+        for (var output : outputSeed.entrySet()) {
+            long total = Math.max(0L, output.getValue());
+            if (total <= 0) continue;
+            long cursor = 0L;
+            for (var target : credits.values()) {
+                long amount = Math.max(0L, target.getOrDefault(output.getKey(), 0L));
+                cursor = Sat.add(cursor, amount);
+                addCreditBoundary(boundaries, total, copiesPerCycle, cursor);
+            }
+            if (cursor != total) {
+                throw new IllegalArgumentException(
+                        "consumer credits do not match member seed output for "
+                                + output.getKey());
+            }
+        }
+    }
+
+    private static void addCreditBoundary(
+            Set<Long> boundaries,
+            long total,
+            long copiesPerCycle,
+            long flattenedOffset) {
+        if (flattenedOffset <= 0L) {
+            boundaries.add(0L);
+            return;
+        }
+        if (flattenedOffset >= total) {
+            boundaries.add(copiesPerCycle);
+            return;
+        }
+        long low = 0L;
+        long high = copiesPerCycle;
+        while (low < high) {
+            long mid = low + ((high - low) >>> 1);
+            if (creditPrefix(total, copiesPerCycle, mid) < flattenedOffset) low = mid + 1L;
+            else high = mid;
+        }
+        long boundary = low;
+        if (creditPrefix(total, copiesPerCycle, boundary) != flattenedOffset
+                && boundary > 0L) {
+            boundaries.add(boundary - 1L);
+        }
+        boundaries.add(boundary);
+    }
+
+    private static long creditPrefix(
+            long total, long copiesPerCycle, long copyIndex) {
+        if (total <= 0L || copiesPerCycle <= 0L || copyIndex <= 0L) return 0L;
+        if (copyIndex >= copiesPerCycle) return total;
+        long quotient = total / copiesPerCycle;
+        long remainder = total % copiesPerCycle;
+        return quotient * copyIndex + Math.min(copyIndex, remainder);
+    }
+
     record MemberFlowSlice(
             Map<AEKey, Long> inputSeed,
             Map<AEKey, Long> outputSeed,
+            Map<UUID, Map<AEKey, Long>> outputSeedCredits,
             long copiesPerCycle) {
         MemberFlowSlice {
-            inputSeed = Map.copyOf(inputSeed);
-            outputSeed = Map.copyOf(outputSeed);
+            inputSeed = Collections.unmodifiableMap(new LinkedHashMap<>(inputSeed));
+            outputSeed = Collections.unmodifiableMap(new LinkedHashMap<>(outputSeed));
+            var copiedCredits = new LinkedHashMap<UUID, Map<AEKey, Long>>();
+            for (var entry : outputSeedCredits.entrySet()) {
+                copiedCredits.put(entry.getKey(),
+                        Collections.unmodifiableMap(new LinkedHashMap<>(entry.getValue())));
+            }
+            outputSeedCredits = Collections.unmodifiableMap(copiedCredits);
         }
     }
 
